add light sensor and themes to change between TODO: find out how to make theme changeable without activity reset

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Dark" parent="AppTheme">
+        <item name="android:background">@color/bmiBlue</item>
+    </style>
+
+    <style name="AppTheme.Light" parent="AppTheme">
+        <item name="android:background">@color/bmiGreen</item>
+    </style>
+
 </resources>
